# ChatList

./: .gitignore  DATABASE.md  DEPLOY_ETAP8.sh  ETAP_8_BUGFIX.md  ETAP_8_IMPLEMENTATION.md  ETAP_8_QUICKREF.md  ETAP_8_READY.md  ETAP_8_SUMMARY.md  INDEX_ETAP8.md  INSTALL.md  LICENSE  PLAN.md  PROJECT.md  QUICKSTART.md  README.md  UPDATE_MODELS.md  check_setup.py  create_icon.py  openrouter_models.json  pyproject.toml  requirements.txt  run.py  run.sh  setup.sh  test-db.py  test_etap8.sh
chatlist/: __init__.py  app.py
chatlist/config/: settings.py
chatlist/core/: __init__.py  enhance_result.py  prompt_enhancer_client.py  prompt_enhancer_manager.py  request_processor.py
chatlist/db/: __init__.py  database_manager.py  init_db.py  model_manager.py  prompt_manager.py  result_manager.py  settings_manager.py
chatlist/migrations/: 001_initial_schema.sql  002_prompt_enhancements.sql
chatlist/models/: __init__.py  anthropic_client.py  base_client.py  client_factory.py  google_client.py  openai_client.py  openrouter_client.py
chatlist/ui/: __init__.py  about_dialog.py  main_window.py  markdown_viewer.py  model_dialog.py  model_selector.py  prompt_enhancer_dialog.py  prompt_input.py  result_comparison.py  results_table.py  saved_results_dialog.py  settings_dialog.py  theme_manager.py
chatlist/utils/: openrouter_models.py
tests/: test_prompt_enhancer.py
